# notify

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE.md  Rocket.toml  crates.js  help.html  index.html  search-index.js  settings.html  source-files.js  src-files.js
.github/: README.md
.github/workflows/: documentation.yml  package.yml
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
implementors/serde/de/: trait.Deserialize.js
implementors/serde/ser/: trait.Serialize.js
notifier/: all.html  fn.main.html  fn.rocket.html  index.html  sidebar-items.js
notifier/get/: fn.channel.html  fn.general.html  fn.health.html  index.html  sidebar-items.js
notifier/helpers/: fn.retrieve_message.html  fn.store_message.html  index.html  sidebar-items.js
notifier/message/: index.html  struct.Message.html
notifier/post/: fn.channel.html  fn.general.html  index.html  sidebar-items.js
src/: get.rs  helpers.rs  main.rs  message.rs  post.rs
src/notifier/: get.rs.html  helpers.rs.html  main.rs.html  message.rs.html  post.rs.html
trait.impl/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
