[package]
name = "notifier"
version = "1.0.0"
edition = "2021"
authors = ["Xavier2p <https://xavier2p.fr>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "=0.5.0-rc.3", features = ["json"]}
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
tokio = { version = "1.29.1", features = ["full", "macros", "rt-multi-thread"] }
